add rbac swagger
